<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:id="@+id/teachernamerec"
                android:layout_margin="2dp"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/post"
                android:id="@+id/teacherpostrec"
                android:layout_margin="2dp"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/teacheremail"
                android:id="@+id/teacheremailrec"
                 android:layout_margin="2dp"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.google.android.material.button.MaterialButton
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/updatebutton"
                android:gravity="center"
                android:layout_margin="10dp"
                android:id="@+id/updatebuttonrec"
                android:padding="5dp"
              style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/teacherimagerec"
                android:layout_width="120dp"
                app:civ_border_width="5sp"
                android:src="@drawable/elonmusk"
                app:civ_border_color="@color/green"
                android:layout_height="240dp"/>


        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>