<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Uploadnotice">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:elevation="@dimen/cardview_compat_inset_shadow">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:id="@+id/addphoto"
            android:background="@drawable/color_pink"
            android:src="@drawable/ic_addphoto"
            android:padding="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@android:color/black"
            android:layout_height="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/addphoto"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>
      </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="match_parent">

             <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/noticetitle"
                 android:layout_width="match_parent"
                 android:hint="@string/addtile"
                 android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/uplophoto"
            android:textAlignment="center"
            android:text="@string/upload"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="390dp">

            <ImageView
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/noticepreview"
                android:layout_height="match_parent"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</ScrollView>